--- a/templateBoostrap/index.html
+++ b/templateBoostrap/index.html
@@ -61,7 +61,7 @@
                         <img src="img/teste1.jpg" class="img-responsive">
                     </div>
                     <div class="item">
-                        <img src="img/teste2.jpg" class="img-responsive">
+                        <img src="img/teste2.jpeg" class="img-responsive">
                     </div>
                     <div class="item">
                         <img src="img/teste3.jpg" class="img-responsive">
