atualização do  grid

--- a/templateBoostrap/index.html
+++ b/templateBoostrap/index.html
@@ -82,7 +82,7 @@
                 </a>                
             </div><!-- fim do carousel -->
     
-    <div class="container container-fluid">
+    <div class="container container-fluid col-md-12 col-xl-12 col-lg-12">
     <main>
          <div class="row" id="main">
             <div class="texto">
